--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
 		"autoprefixer": "^10.4.17",
+		"daisyui": "^4.6.1",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -38,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/ssr": "^0.1.0",
 		"@sveltejs/adapter-vercel": "^4.0.5",
 		"airtable": "^0.12.2",
 		"papaparse": "^5.4.1",
