--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.12.0",
+		"@supabase/auth-ui-shared": "^0.1.8",
+		"@supabase/auth-ui-svelte": "^0.2.9",
 		"@supabase/ssr": "^0.1.0",
 		"@sveltejs/adapter-vercel": "^4.0.5",
 		"airtable": "^0.12.2",
