--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@sveltejs/adapter-vercel": "^4.0.5",
 		"airtable": "^0.12.2",
 		"papaparse": "^5.4.1",
-		"xlsx": "^0.18.5"
+		"xlsx": "^0.18.5",
+		"zod": "^3.22.4"
 	}
 }
