--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 		"@supabase/ssr": "^0.1.0",
 		"@sveltejs/adapter-vercel": "^4.0.5",
 		"airtable": "^0.12.2",
+		"imap": "^0.8.19",
+		"mailparser": "^3.7.1",
 		"nodemailer": "^6.9.13",
 		"papaparse": "^5.4.1",
 		"qs": "^6.12.0",
