scheduled cron job

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-	"version": 2,
-	"builds": [
+	"crons": [
 		{
-			"src": "api/scheduledTask.js",
-			"use": "@vercel/node"
+			"path": "/api/process-emailed-rfqs",
+			"schedule": "*/15 * * * *"
 		}
-	],
-	"functions": {
-		"scheduledTask": {
-			"schedule": "cron(*/15 * * * *)"
-		}
-	}
+	]
 }
