--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"mailparser": "^3.7.1",
 		"nodemailer": "^6.9.13",
 		"papaparse": "^5.4.1",
+		"puppeteer": "^22.12.0",
 		"qs": "^6.12.0",
 		"xlsx": "^0.18.5",
 		"zod": "^3.22.4"
