--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"postcss": "^8.4.33",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"puppeteer": "^21.6.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.1",
@@ -42,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sentry/sveltekit": "^7.112.2",
+		"@sparticuz/chromium": "^123.0.1",
 		"@supabase/auth-helpers-sveltekit": "^0.12.0",
 		"@supabase/auth-ui-shared": "^0.1.8",
 		"@supabase/auth-ui-svelte": "^0.2.9",
@@ -52,7 +54,7 @@
 		"mailparser": "^3.7.1",
 		"nodemailer": "^6.9.13",
 		"papaparse": "^5.4.1",
-		"puppeteer": "^22.12.0",
+		"puppeteer-core": "^22.12.1",
 		"qs": "^6.12.0",
 		"xlsx": "^0.18.5",
 		"zod": "^3.22.4"
