--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "vite build && npm run package",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
@@ -43,7 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sentry/sveltekit": "^7.112.2",
-		"@sparticuz/chromium": "^123.0.1",
+		"@sparticuz/chromium": "^92.0.0",
 		"@supabase/auth-helpers-sveltekit": "^0.12.0",
 		"@supabase/auth-ui-shared": "^0.1.8",
 		"@supabase/auth-ui-svelte": "^0.2.9",
@@ -54,7 +54,7 @@
 		"mailparser": "^3.7.1",
 		"nodemailer": "^6.9.13",
 		"papaparse": "^5.4.1",
-		"puppeteer-core": "^22.12.1",
+		"puppeteer-core": "^10.1.0",
 		"qs": "^6.12.0",
 		"xlsx": "^0.18.5",
 		"zod": "^3.22.4"
