--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@supabase/ssr": "^0.1.0",
 		"@sveltejs/adapter-vercel": "^4.0.5",
 		"airtable": "^0.12.2",
+		"axios": "^1.7.2",
 		"imap": "^0.8.19",
 		"mailparser": "^3.7.1",
 		"nodemailer": "^6.9.13",
